kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: charity-backend-service
spec:
  type: ClusterIP
  selector:
    app: charity-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
